# serializer version: 1
# name: test_nan_input
  'Found a NaN in the input array [nan].'
# ---
# name: test_nan_output
  'Found a NaN in the output data of the function f evaluated at the input array [1.].'
# ---
